added first changes to landing page css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/homepage.css" />
-    <title>CurioCity - Discover and Explore Cities Around the World</title>
 </head>
 
 <body>
@@ -22,7 +21,7 @@
         <img src="./assets/img/logo.png" alt="Logo" class="logo">
         <div>
             <h1 class="title">Ready to explore? Where to?</h1>
-            <h6>Please type in a city!</h6>    
+            <p>Please type in a city!</p>    
             <form id="cityForm" action="landing.html" method="get">
                 <input type="text" id="cityInput" name="city" class="form-control responsive-input inputArea" aria-label="City input" aria-describedby="inputGroup-sizing-default">
                 <div>
@@ -35,9 +34,12 @@
             </div>    
         </div>
     </div>
-    <!-- <footer class="footer">
+
+    <footer class="footer">
         <p class="footerText">© 2024 CurioCity, Inc. All rights reserved.</p>
-    </footer> -->
+    </footer>
+    
+
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Day.js -->
