--- a/landing.html
+++ b/landing.html
@@ -5,45 +5,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/styles.css"/>
-  <title>CurioCity - Here are your results!</title>
 </head>
 
 <body>
   <!-- Navbar Code -->
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container-fluid navbar-content">
-      <a class="landing-logo" href="index.html">
-        <img src="./assets/img/logo.png" alt="logo" width="60" class="landing-logo">
+  <nav class="navbar navbar-expand-lg">
+      <a href="index.html">
+        <img src="./assets/img/logo.png" alt="logo" width="60">
       </a>
-      <div class="collapse navbar-collapse">
-        <h3>Embark on a Journey of Wonders with CurioCity!</h3>
-      </div>
-      <div class="nav-buttons">
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Sections
-          </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#weather">Weather</a>
-            <a class="dropdown-item" href="#currency-exchange">Currency Exchange</a>
-            <a class="dropdown-item" href="#food">Recipes</a>
-            <a class="dropdown-item" href="#movies">Movies</a>
-          </div>
-        </div>
-        <a class="btn btn-sm" href="mailto:recipient@example.com">Get in touch</a>
-      </div>
+      <h4>Embark on a Journey of Wonders with CurioCity!</h4>
   </nav>
   <!-- Hero Section -->
   <section class="px-4 py-5 mb-3 text-center">
     <div class="d-flex flex-row">
-      <div class="card w-25">
+      <div class="w-25">
         <div id="image-city"></div>
         <div id="weather" class="card">
           <div class="card-body">
@@ -65,7 +47,7 @@
       </div>
       <div class="card w-50 movies-card movies">
         <div class="card-body">
-          <h5 class="card-title">Trending movies in your City!</h5>
+          <h5 class="card-title">Trending movies in this city!</h5>
           <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
@@ -89,27 +71,11 @@
     </div>
   </section>
   <!-- Footer -->
-  <footer class="py-2">
-    <div class="footer-container">
-      <div class="row justify-content-center">
-        <div class="col-12 text-center mb-1">
-          <p class="text-muted small">© 2024 CurioCity, Inc. All rights reserved.</p>
-        </div>
-        <div class="col-12 text-center mb-1">
-          <p class="text-muted small">Creators :</p>
-        </div>
-        <div class="col-12 text-center">
-          <a href="https://github.com/paulinasiwko" class="me-2">Paulina Siwko</a>
-          <a href="https://github.com/Nirmean" class="me-2">Nirmean Sawi</a>
-          <a href="https://github.com/Contributor3" class="me-2">Divine Ede</a>
-          <a href="https://github.com/TomixJasina" class="me-2">Tomasz Jasinski</a>
-          <a href="https://github.com/MrKatrish" class="me-2">Michal Paleczny</a>
-        </div>
-      </div>
-    </div>
-    </footer>
-    </div>
+
+  <footer class="footer">
+    <p class="footerText">© 2024 CurioCity, Inc. All rights reserved.</p>
   </footer>
+
   <!-- Day.JS -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
